@@ -266,7 +266,7 @@ module ActiveScaffold
       unless controller.nil?
         options.reverse_merge! :label => column.label, :position => :after, :type => :member, :controller => (controller == :polymorph ? controller : controller.controller_path), :column => column
         options[:parameters] ||= {}
-        options[:parameters].reverse_merge! :parent_scaffold => controller_path, :association => column.association.name
+        options[:parameters].reverse_merge! :association => column.association.name
         if column.plural_association?
           # note: we can't create nested scaffolds on :through associations because there's no reverse association.
           
@@ -285,7 +285,7 @@ module ActiveScaffold
     def link_for_association_as_scope(scope, options = {})
       options.reverse_merge! :label => scope, :position => :after, :type => :member, :controller => controller_path
       options[:parameters] ||= {}
-      options[:parameters].reverse_merge! :parent_scaffold => controller_path, :named_scope => scope
+      options[:parameters].reverse_merge! :named_scope => scope
       ActiveScaffold::DataStructures::ActionLink.new('index', options)
     end
 
